[MOSIP-32456]
Signed-off-by: JanardhanBS-SyncByte <janardhan@syncbyte.in>